[gd_scene load_steps=3 format=3 uid="uid://dit0rnnewfvh6"]

[ext_resource type="Script" path="res://scenes/levelmenu.gd" id="1_aoyad"]
[ext_resource type="Texture2D" uid="uid://c7rmuxk5wnru0" path="res://Brown.png" id="2_788x0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aoyad")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_788x0")
stretch_mode = 1

[node name="back" type="Button" parent="."]
layout_mode = 0
offset_left = 193.0
offset_top = 78.0
offset_right = 869.0
offset_bottom = 164.0
text = "back to menu"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 196.0
offset_top = 208.0
offset_right = 290.0
offset_bottom = 288.0

[node name="level 1" type="Button" parent="MarginContainer"]
layout_mode = 2
text = "level 1"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 481.0
offset_top = 203.0
offset_right = 578.0
offset_bottom = 278.0

[node name="level 2" type="Button" parent="MarginContainer2"]
layout_mode = 2
text = "level 2"

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 758.0
offset_top = 194.0
offset_right = 869.0
offset_bottom = 282.0

[node name="level 3" type="Button" parent="MarginContainer3"]
layout_mode = 2
text = "level 3"

[node name="MarginContainer4" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 201.0
offset_top = 423.0
offset_right = 289.0
offset_bottom = 495.0

[node name="level 4" type="Button" parent="MarginContainer4"]
layout_mode = 2
text = "level 4"

[node name="MarginContainer5" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 481.0
offset_top = 420.0
offset_right = 572.0
offset_bottom = 496.0

[node name="level 5" type="Button" parent="MarginContainer5"]
layout_mode = 2
text = "level 5"

[node name="MarginContainer6" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 759.0
offset_top = 414.0
offset_right = 860.0
offset_bottom = 501.0

[node name="level 6" type="Button" parent="MarginContainer6"]
layout_mode = 2
text = "level 6"

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MarginContainer2/level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer3/level 3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="MarginContainer4/level 4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="MarginContainer5/level 5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="MarginContainer6/level 6" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="MarginContainer6/level 6" to="." method="_on_level_6_pressed"]
