extends Control


func _on_back_pressed():
	get_tree().change_scene_to_file("res://scenes/menu.tscn")


func _on_level_1_pressed():
	get_tree().change_scene_to_file("res://scenes/level1.tscn")


func _on_level_2_pressed():
	pass # Replace with function body.


func _on_level_3_pressed():
	pass # Replace with function body.


func _on_level_4_pressed():
	pass # Replace with function body.


func _on_level_5_pressed():
	pass # Replace with function body.

func _on_level_6_pressed():
	pass # Replace with function body.

